[gd_scene load_steps=11 format=3 uid="uid://ohh7bftd3kvo"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_6itma"]
[ext_resource type="PackedScene" uid="uid://6gofu3xm83fx" path="res://scenes/Ingredient.tscn" id="2_8ut5c"]
[ext_resource type="PackedScene" uid="uid://du048arfkmk7" path="res://scenes/Player.tscn" id="3_5vw5y"]
[ext_resource type="PackedScene" uid="uid://bgdmk5wd6i8uo" path="res://scenes/NPC.tscn" id="3_eot5w"]
[ext_resource type="Texture2D" uid="uid://cl3afyaiaw7yt" path="res://art/game_background_outline.png" id="3_k6h8b"]
[ext_resource type="PackedScene" uid="uid://dv4baml1twpu2" path="res://scenes/Oven.tscn" id="6_8y440"]
[ext_resource type="PackedScene" uid="uid://wm64m4p8ix3d" path="res://scenes/SaleCounter.tscn" id="7_pwdfb"]
[ext_resource type="PackedScene" uid="uid://dqfwvvi6rb8gb" path="res://scenes/HUD.tscn" id="8_660gl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyenl"]
size = Vector2(1921, 202)

[sub_resource type="Curve2D" id="Curve2D_gi6cn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 256, 0, 0, 0, 0, 0, 1368, 0)
}
point_count = 2

[node name="Game" type="Node"]
script = ExtResource("1_6itma")
ingredient_scene = ExtResource("2_8ut5c")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("3_k6h8b")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-8, 0)
collision_layer = 2
collision_mask = 8
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Floor"]
offset_left = 8.0
offset_top = 880.0
offset_right = 1928.0
offset_bottom = 1080.0
color = Color(0.247059, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(967.5, 981)
shape = SubResource("RectangleShape2D_xyenl")

[node name="Oven" parent="." instance=ExtResource("6_8y440")]
position = Vector2(416, 512)

[node name="SaleCounter" parent="." instance=ExtResource("7_pwdfb")]
position = Vector2(1560, 560)

[node name="Player" parent="." instance=ExtResource("3_5vw5y")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(300, 700)

[node name="IngredientTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="IngredientPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_gi6cn")

[node name="IngredientSpawnLocation" type="PathFollow2D" parent="IngredientPath"]
position = Vector2(256, 0)

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="NPC" parent="." instance=ExtResource("3_eot5w")]
position = Vector2(2020, 700)

[node name="HUD" parent="." instance=ExtResource("8_660gl")]

[node name="CountdownTimer" type="Timer" parent="."]

[connection signal="completed_baking" from="Oven" to="." method="_on_oven_completed_baking"]
[connection signal="order_sold" from="SaleCounter" to="." method="_on_sale_counter_order_sold"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="IngredientTimer" to="." method="_on_ingredient_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="bake_ingredients" from="NPC" to="." method="_on_npc_bake_ingredients"]
[connection signal="order_completed" from="NPC" to="." method="_on_npc_order_completed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
